--- a/etf_holdings/Cargo.toml
+++ b/etf_holdings/Cargo.toml
@@ -7,7 +7,8 @@ description = "A library to fetch and parse ETF holding data from the fund's own
 [dependencies]
 async-trait = "0.1"
 csv = "1.1"
-reqwest = { version = "0.11", features = ["blocking"] }
+lazy_static = "1.4.0"
+reqwest = { version = "0.11" }
 scraper = "0.12.0"
 serde =  { version = "1.0", features = ["derive"] }
 tokio = { version = "1.12", features = ["sync"] }
