--- a/etf_holdings/Cargo.toml
+++ b/etf_holdings/Cargo.toml
@@ -11,4 +11,5 @@ lazy_static = "1.4.0"
 reqwest = { version = "0.11" }
 scraper = "0.12.0"
 serde =  { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.12", features = ["sync"] }
