--- a/web_server/Cargo.toml
+++ b/web_server/Cargo.toml
@@ -6,6 +6,7 @@ description = "API server for breaking down ETFs into their holding and give you
 
 [dependencies]
 etf_holdings = { path = "../etf_holdings" }
+chrono = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
 serde =  { version = "1.0", features = ["derive"] }
